[tool.poetry]
name = "Quart Uploads"
version = "0.0.1"
description = "File upload handling for Quart."
authors = ["Chris Rood <crood58@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "*"
quart = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
sphinx = "*"
pydata_sphinx_theme = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
