[tool.poetry]
name = "Quart Uploads"
version = "0.0.1"
description = "File upload handling for Quart."
authors = ["Chris Rood <crood58@gmail.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pallets/quart/"
documentation = "https://quart-uploads.readthedocs.io/en/latest/"
packages = [
    { include = "quart_uploads"},
]

[tool.poetry.dependencies]
python = "3.10"
aiofiles = "*"
quart = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
sphinx = "*"
pydata_sphinx_theme = "*"

[tool.poetry.extras]
docs = ["pydata_sphinx_theme"]

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "quart_uploads, tests"
line_length = 100
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
order_by_type = false
reverse_relative = true

[tool.mypy]
allow_redefinition = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
show_error_codes = true
strict = true
strict_equality = true
strict_optional = false
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--no-cov-on-fail --showlocals --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
