[tool.poetry]
name = "photolog"
version = "0.0.1"
description = "An example for Quart Uploads."
authors = ["Chris Rood <crood58@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
