[tool.poetry]
name = "photolog"
version = "0.0.1"
description = "An example for Quart Uploads."
authors = ["Chris Rood <crood58@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
quart = "*"
quart_uploads = "*"
Flask-SQLAlchemy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.scripts]
init_db = "photolog:init_db"
start = "photolog:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
